welcome.lessons.welcome.summative.Moria.scala.code

System.out.println(Direction.EAST)